Fix some broken CSS
The opacity SCSS broke in production mode when compiled to CSS. I'm not
sure why but switching to a 0-1 scale rather than a percent seems to fix
it. Maybe that's a bug in my SCSS compiler?

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -81,13 +81,13 @@ fieldset {
 }
 
 .full {
-  opacity: 100%
+  opacity: 1.0;
 }
 
 .hungry {
-  opacity: 66%
+  opacity: 0.6;
 }
 
 .starving {
-  opacity: 33%
+  opacity: 0.3;
 }
